--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_script:
   - npm install -g gulp mocha coveralls
 
 script:
-  - babel-istanbul cover _mocha -- --compilers js:babel/register test/**/*.js --timeout 15000 --include-babel-polyfill=true
-
-after_success:
-  - coveralls --verbose
+  - babel-istanbul cover ./node_modules/mocha/bin/_mocha \
+    --report lcovonly -- --compilers js:babel/register test/**/*.js \
+    --timeout 15000 --include-babel-polyfill=true && \
+    cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && \
+    rm -rf ./coverage
