--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "jscs": "^2.1.1",
     "matchdep": "^0.3.0",
     "minimist": "^1.2.0",
+    "mocha": "^2.3.3",
     "mocha-istanbul": "^0.2.0",
+    "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.10.0",
     "node-sass": "^3.3.2",
     "rewire": "^2.3.4",
