--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
 
 script:
   - babel-istanbul cover ./node_modules/mocha/bin/_mocha \
-    --report lcovonly -- --compilers js:babel/register test/**/*.js \
+    -- --compilers js:babel/register test/**/*.js --report lcovonly \
     --timeout 15000 --include-babel-polyfill=true && \
     cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && \
     rm -rf ./coverage
