--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_script:
   - npm install -g gulp mocha coveralls
 
 script:
-  - babel-istanbul cover ./node_modules/mocha/bin/_mocha \
-    -- --compilers js:babel/register test/**/*.js --report lcovonly \
+  - babel-istanbul cover ./node_modules/mocha/bin/_mocha -- test/**/*.js \
+    --compilers js:babel/register --report lcovonly \
     --timeout 15000 --include-babel-polyfill=true && \
     cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && \
     rm -rf ./coverage
