--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "babel-eslint": "^4.1.1",
     "babel-istanbul": "^0.3.20",
+    "coveralls": "^2.11.4",
     "csscomb": "^3.1.8",
     "del": "^2.0.0",
     "eslint": "^1.3.1",
