--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
   - "0.12"
 
 script:
-  - babel-istanbul cover ./node_modules/mocha/bin/_mocha -- --compilers js:babel/register test/**/*.js --report lcovonly --timeout 15000 --include-babel-polyfill=true && \
-    cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && \
+  - babel-istanbul cover ./node_modules/mocha/bin/_mocha -- --compilers js:babel/register test/**/*.js --report lcovonly --timeout 15000 --include-babel-polyfill=true &&
+    cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js &&
     rm -rf ./coverage
