--- a/package.json
+++ b/package.json
@@ -43,13 +43,17 @@
     "pg": "4.1.1"
   },
   "devDependencies": {
+    "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.1",
     "babel-istanbul": "^0.3.20",
+    "babel-loader": "^5.3.2",
     "coveralls": "^2.11.4",
     "csscomb": "^3.1.8",
     "del": "^2.0.0",
     "eslint": "^1.3.1",
+    "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.3.1",
+    "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-awspublish": "^3.0.0",
@@ -67,6 +71,7 @@
     "jscs": "^2.1.1",
     "matchdep": "^0.3.0",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
     "mocha-istanbul": "^0.2.0",
     "mocha-lcov-reporter": "^1.0.0",
@@ -76,7 +81,10 @@
     "run-sequence": "^1.1.2",
     "should": "^7.1.0",
     "sinon": "^1.16.1",
+    "style-loader": "^0.12.4",
     "supertest": "^1.1.0",
-    "testem": "^0.9.2"
+    "testem": "^0.9.2",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2"
   }
 }
