--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "compression": "1.5.2",
     "connect-slashes": "1.3.1",
     "crypto": "0.0.3",
+    "eventemitter3": "^1.1.1",
     "express": "4.13.3",
     "express-hbs": "0.8.4",
     "fbjs": "0.2.1",
