--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "node-uuid": "1.4.3",
     "nodemailer": "1.4.0",
     "react": "0.13.3",
+    "react-redux": "^3.0.1",
     "react-router": "0.13.3",
+    "redux": "^3.0.2",
     "request": "2.61.0",
     "semver": "5.0.1",
     "sqlite3": "3.0.8",
@@ -78,6 +80,7 @@
     "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.10.0",
     "node-sass": "^3.3.2",
+    "redux-devtools": "^2.1.5",
     "rewire": "^2.3.4",
     "run-sequence": "^1.1.2",
     "should": "^7.1.0",
