--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "private": true,
   "main": "index.js",
-  "engines": {
-    "node": ">= 0.12",
-    "npm": ">= 2.1"
-  },
   "scripts": {
     "start": "node index"
   },
@@ -21,6 +17,7 @@
     "eventemitter3": "^1.1.1",
     "express": "4.13.3",
     "express-hbs": "0.8.4",
+    "express-slash": "^2.0.1",
     "fbjs": "0.2.1",
     "flux": "2.1.1",
     "fs-extra": "0.24.0",
@@ -28,6 +25,7 @@
     "lodash": "3.10.1",
     "moment": "2.10.6",
     "morgan": "1.6.1",
+    "mysql": "^2.12.0",
     "newrelic": "^1.22.0",
     "node-uuid": "1.4.3",
     "nodemailer": "1.4.0",
@@ -37,13 +35,11 @@
     "redux": "^3.0.2",
     "request": "2.61.0",
     "semver": "5.0.1",
-    "sqlite3": "3.0.8",
+    "serve-favicon": "^2.3.0",
+    "sqlite3": "3.1.8",
     "unidecode": "0.1.7",
     "validator": "4.0.5",
     "winston": "1.0.1"
-  },
-  "optionalDependencies": {
-    "pg": "4.1.1"
   },
   "devDependencies": {
     "babel-core": "^5.8.25",
